--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -7,6 +7,7 @@
   width: 100vw;
   background-color: #cc8100;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
+  margin-top: 100px;
 }
 /* 
 .avatar {
