--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -5,8 +5,10 @@ nav {
   background-color: #4056A1;
   color: #FFFFFF;
   justify-content: space-between;
-  position: -webkit-sticky;
-  position: sticky;
+  /* position: -webkit-sticky;
+  position: sticky; */
+  position: fixed;
+  top: 0;
 }
 
 .nav-logo {
