--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -5,6 +5,10 @@ button {
   height: 30px;
 }
 
+button:hover {
+  box-shadow: 3px 3px 3px rgb(64 86 161 / 0.7);
+}
+
 form label {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 600;
