--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -23,7 +23,7 @@ body {
 }
 
 /*
- * Additional CSS can be defined below or in other CSS files, as per instructions
+ * Additional CSS can be defined below or in other CSS files, as per instructionss
  */
 
  .container {
