style nav to remain fixed; set colours and correct coluring; logo and appropriate fonts incorporated, place responsive sizing for header; change units to em where possible

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -5,7 +5,7 @@ nav {
   background-color: #4056A1;
   color: #FFFFFF;
   justify-content: space-between;
-  /* position: -webkit-sticky;
+  /* psition: -webkit-sticky;
   position: sticky; */
   position: fixed;
   top: 0;
