add media queries for 1024px+ screens; fix transition from large to small at one breakpoint; change navigation colour to transparent on small screen, blue for large. Still need to address sizing for nav (width), and left column for header + font sizing

--- a/public/styles/display-tweets.css
+++ b/public/styles/display-tweets.css
@@ -85,8 +85,11 @@ article footer {
   display:none;
 }
 
-#specific-message {
+#error-message {
   display:inline;
   color:red;
+}
 
+.fa-exclamation-triangle {
+  color: red;
 }
