--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -3,11 +3,12 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  height: 400px;
+  height: 500px;
   width: 100vw;
   background-color: #cc8100;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
-  margin-top: 100px;
+  /* margin-top: 100px; */
+  z-index: -1;
 }
 /* 
 .avatar {
