--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,14 +1,15 @@
 nav {
   display: flex;
-  height: 100px;
+  height: 120px;
   width: 100vw;
-  background-color: #4056A1;
+  /* background-color: #4056A1; */
   color: #FFFFFF;
   justify-content: space-between;
   /* psition: -webkit-sticky;
   position: sticky; */
   position: fixed;
-  top: 0;
+  /* top: 0; */
+  z-index: 1;
 }
 
 .nav-logo {
