--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -5,6 +5,8 @@ button {
   height: 30px;
 }
 
+
+
 button:hover {
   box-shadow: 3px 3px 3px rgb(64 86 161 / 0.7);
 }
@@ -17,6 +19,10 @@ form label {
   display: flex;
   flex-direction: column;
   flex-grow: 5;
+}
+
+.new-tweet h2 {
+  align-self: center;
 }
 
 #tweet-text {
