--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,5 @@
 .profile-header {
+  color: #f4f1ec;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -9,7 +10,9 @@
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
   /* margin-top: 100px; */
   z-index: -1;
+  /* position: fixed; */
 }
+
 /* 
 .avatar {
   display: flex;
