--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -1,5 +1,6 @@
 @media only screen and (min-width: 1024px) {
 
+  /* nav element section */
   nav {
     position: static;
     margin-top: 0;
@@ -8,30 +9,88 @@
     background-color: #4056A1;
   }
 
- 
+  /* header & main container elements */
   .wrapper {
     display: flex;
-    margin: 500px auto;
-
-    
+    flex-direction: row;
   } 
 
+  /* everything inside header here */
   .profile-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     order: 0;
-    margin-top: 100px;
-    height: 300px;
-    width: 300px;
-    padding: 200px;
+    margin: 200px 50px;
+    height: 250px;
+    width: 25%;
+    position: static;
+    /* padding: 115px; */
+  }
+
+  .profile-name {
+    width: 100%;
+    text-align: center;
+  }
+
+  .profile-header h2 {
+    font-size: 1em;
   }
 
   #header-img {
-    margin-top: 100px;
-    height: 250px;
-    width: auto;
+    /* padding-top: 5rem; */
+    margin-top: 2rem;
+    height: 7rem;
+    width: 7rem;
   }
 
-  /* .container {
-    order: 1;
+
+ /*  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 90%;
+    background-color: #f4f1ec;
+    margin: 0 5%;
   } */
+  /* everything inside the main container */
+  .container {
+    order: 1;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: content-box;
+
+  }
+
+  #tweet-container {
+    box-sizing: content-box;
+    width: 85%;
+    margin-top: 0;
+  }
+
+  .tweet-container {
+    width: 100%;
+    box-sizing: content-box;
+  }
+
+  #tweet-text {
+    width: 100%;
+  }
+ 
+  /* new tweet form section */
+  .new-tweet {
+    width: 85%;
+  }
+ 
+
+  /* #new-tweet-form {
+    max-width: 700px;
+  } */
+
+  
+
+
   
 } 
